Font visibility fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,7 +27,7 @@ footer .logo{height:120px;opacity:0.9;}
 .team-card{padding:2vh 0;}
 .team-number{float:right;display:inline-block;padding:1vh 1vw;font-weight:500;}
 .lead-text{font-weight:600;}
-.team-header-text{font-size:30px;opacity:0.8;padding:0 4vw;font-weight:600;}
+.team-header-text{font-size:125%;opacity:0.8;padding:0 2vw;font-weight:600;}
 .team-header{font-weight:600;}
 .team-landing{padding:5vh;}
 .team-faculty{padding:10vh 0;font-size:24px;}
